fix format on mobile

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -14,3 +14,8 @@ h1 {
   font-weight: 700;
   letter-spacing: 0.1em;
 }
+
+main-logo {
+  max-width: 100%;
+  height: auto;
+}
